# aparavi-dtc-sdk

./: .gitignore  README.md  pyproject.toml  setup.py
aparavi-dtc-sdk/: exceptions.py  models.py
aparavi_dtc_sdk/: __init__.py  client.py
aparavi_dtc_sdk/pipelines/: audio_and_summary.json  simple_audio_transcribe.json  simple_parser.json
tests/: __init__.py  test_client.py
